Fix for bug #51605 (Mysqli zombie links)